[package]
name = "ras-al-ghul-cache"
version = "0.1.0"
authors = ["walid"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.0.0"
mini-redis = "0.4"
lazy_static = "1.4.0"
resp = "1.0.2"
