[package]
name = "ras-al-ghul-cache"
version = "0.1.0"
authors = ["walid.chergui@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.11.2"
resp = "1.0.2"
toml = "0.5"
clokwerk = "0.3.5"